# updating

./: .gitignore  prepare_release.sh
CumulusInterfaces/CMC/: interfaces
CumulusInterfaces/DTNIRSW/: interfaces
CumulusInterfaces/VMC/: interfaces
FirmwareUpdater/: cumulus_setup.py  fpga_firmware_loader.py
Flicker_Detection/: CMakeLists.txt
Flicker_Detection/include/: CudaManager.h  DebugLog.h  DirectoryException.h  DirectoryManager.h  DriverManager.h  DviManager.h  ErrorUtils.h  FlickerDetectionDvi.h  FlickerDetectionVelocity.h  Globals.h  Helpers.h  ImageDisplayTimeout.h  ImageProcessor.h  Resolution.h  ThreadSafeQueue.h  VideoUtils.h  ssim_gpu.h
Flicker_Detection/src/: CudaManager.cpp  DirectoryManager.cpp  DriverManager.cpp  DviManager.cpp  ErrorUtils.cpp  FlickerDetectionDvi.cpp  FlickerDetectionVelocity.cpp  GaussianWindow.cpp  Globals.cpp  Helpers.cpp  ImageProcessor.cpp  VideoUtils.cpp  main.cpp  ssim_gpu.cpp  ssim_kernel.cu
MainSoftware/: CMakeLists.txt
MainSoftware/include/: AppMode.h  Cmc.h  CumulusHelper.h  Device.h  DeviceManager.h  Dtn.h  ErrorPrinter.h  FirmwareUpdaterDefaults.h  FirmwareUpdaterRunner.h  FlickerDetectionConfig.h  FlickerDetectionRunner.h  Hsn.h  Mmc.h  PowerSupplyInterface.h  PsuTelemetryPublisher.h  ReportManager.h  SSHDeployer.h  SafeShutdown.h  SerialPort.h  SerialTimeForwarder.h  Server.h  SystemCommand.h  TdkLambdaPsu.h  UnitManager.h  Utils.h  Vmc.h
MainSoftware/src/: AppMode.cpp  Cmc.cpp  CumulusHelper.cpp  DeviceManager.cpp  Dtn.cpp  FirmwareUpdaterRunner.cpp  FlickerDetectionRunner.cpp  Hsn.cpp  Mmc.cpp  PsuTelemetryPublisher.cpp  ReportManager.cpp  SSHDeployer.cpp  SafeShutdown.cpp  SerialPort.cpp  SerialTimeForwarder.cpp  Server.cpp  SystemCommand.cpp  TdkLambdaPsu.cpp  UnitManager.cpp  Utils.cpp  Vmc.cpp  main.cpp
PdfReportGenerator/: ReportGenerator.py
RemoteConfigSender/: CMakeLists.txt  ConfigSender.cpp  ConfigSender.h  DebugLog.h  main.cpp
dpdk/: Makefile
dpdk/AteCumulus/AteTestMode/: interfaces
dpdk/include/: App.h  Common.h  Config.h  DpdkExternalTx.h  EalInit.h  HealthMonitor.h  HealthTypes.h  Port.h  PortManager.h  PsuTelemetry.h  PsuTelemetryReceiver.h  PtpSlave.h  PtpTypes.h  RawSocketPort.h  Socket.h  TxRxManager.h
dpdk/src/: DpdkExternalTx.c  Globals.c  Helpers.c  PacketManager.c  PortManager.c  RawSocketPort.c  SocketManager.c  TxRxManager.c  main.c
dpdk/src/EmbeddedLatency/: EmbeddedLatency.c  EmbeddedLatency.h
dpdk/src/HealthMonitor/: HealthMonitor.c
dpdk/src/PsuTelemetry/: PsuTelemetryReceiver.c
dpdk/src/Ptp/: PtpFlow.c  PtpPacket.c  PtpState.c  PtpWorker.c
dpdk_cmc/: Makefile
dpdk_cmc/include/: AteMode.h  Common.h  Config.h  MmmsHandler.h  Packet.h  Port.h  PsuTelemetry.h  PsuTelemetryReceiver.h  Socket.h  TxRxManager.h
dpdk_cmc/include/health_monitor/: cmc_es_monitoring.h  cmc_message_types.h  cmc_other_types.h  cmc_sw_monitoring.h  health_monitor.h
dpdk_cmc/src/: AteMode.c  EalInit.c  Globals.c  Helpers.c  MmmsHandler.c  PortManager.c  PsuTelemetryReceiver.c  SocketManager.c  TxRxManager.c  main.c
dpdk_cmc/src/health_monitor/: health_monitor.c  health_monitor_cmc.c
dpdk_vmc/: Makefile
dpdk_vmc/include/: AteCumulusConfig.h  AteMode.h  Config.h  Helpers.h  Port.h  TxRxManager.h
dpdk_vmc/include/health_monitor/: health_monitor.h  vmc_message_types.h
dpdk_vmc/include/ptp/: ptp.h  ptp_wire.h
dpdk_vmc/src/: AteCumulusConfig.c  AteMode.c  EalInit.c  Helpers.c  PortManager.c  TxRxManager.c  main.c
dpdk_vmc/src/health_monitor/: health_monitor.c
dpdk_vmc/src/ptp/: ptp.c
test_starter/: Makefile
test_starter/src/: main.c
